--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,22 +26,20 @@ body {
 .header,
 .body {
   width: 100vw;
-  /* margin: 30px auto; */
   padding: 10% 7%;
   display: grid;
-  /* height: auto; */
-  /* justify-content: center; */
   font-family: "ProximaNova-Bold" !important;
 }
 
 .header {
   background-color: rgb(255, 255, 255);
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: 2.5fr 2px 0.3fr repeat(2, 1fr);
+  grid-template-rows: repeat(3, 60px) auto;
+  grid-template-columns: 2fr 2px repeat(3, 1fr);
   grid-template-areas:
     "box1 box2 box3 box4  box8"
     "box1 box2 box6 box7 ."
-    "box1 box2 box5 . .";
+    "box1 box2 box5 . ."
+    "box1 . . . .";
   color: rgba(0, 0, 0, 1);
   text-align: left;
   grid-gap: 20px;
@@ -86,7 +84,7 @@ body {
   grid-area: box3;
   font-family: "ProximaNova-Bold";
   text-align: center;
-  margin-right: 2.2rem;
+  /* margin-right: 2.2rem; */
 }
 
 .square-border {
@@ -105,27 +103,27 @@ body {
 
 .box4_strategy {
   grid-area: box4;
-  margin-left: 1.7rem;
+  /* margin-left: 1.7rem; */
 }
 
 .box5_creative {
   grid-area: box5;
-  margin-right: 2.2rem;
+  /* margin-right: 2.2rem; */
 }
 
 .box6_operation {
   grid-area: box6;
-  margin-right: 2.2rem;
+  /* margin-right: 2.2rem; */
 }
 
 .box7_marketing {
   grid-area: box7;
-  margin-left: 1.7rem;
+  /* margin-left: 1.7rem; */
 }
 
 .box8_logo {
   grid-area: box8;
-  margin-left: 5rem;
+  /* margin-left: 5rem; */
   cursor: pointer;
 }
 
@@ -206,23 +204,11 @@ body {
   height: 100%;
 }
 
-.lineNew1 {
-  background-image: url("../../grid-bilder/Line-1.png");
-  background-size: contain;
-  grid-area: lineNew1;
-}
-
 .line2 {
   grid-area: line2;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.lineNew2 {
-  background-image: url("../../grid-bilder/Line-2.png");
-  background-size: contain;
-  grid-area: lineNew2;
 }
 
 .line3 {
@@ -232,39 +218,12 @@ body {
   align-items: center;
 }
 
-.lineNew3 {
-  background-image: url("../../grid-bilder/Line-3.png");
-  background-size: contain;
-  grid-area: lineNew3;
-}
-
 .line4 {
   grid-area: line4;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-.lineNew4 {
-  background-image: url("../../grid-bilder/Line-4.png");
-  background-size: contain;
-  grid-area: lineNew4;
-}
-/*
-.line5 {
-  grid-area: line5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.line6 {
-  grid-area: line6;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-*/
 
 .group36 {
   grid-area: group36;
@@ -280,23 +239,11 @@ body {
   align-items: center;
 }
 
-.lineNew8 {
-  background-image: url("../../grid-bilder/Line-8.png");
-  background-size: contain;
-  grid-area: lineNew8;
-}
-
 .line9 {
   grid-area: line9;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.lineNew9 {
-  background-image: url("../../grid-bilder/Line-9.png");
-  background-size: contain;
-  grid-area: lineNew9;
 }
 
 .line10 {
@@ -306,22 +253,26 @@ body {
   align-items: center;
 }
 
-.lineNew10 {
-  background-image: url("../../grid-bilder/Line-10.png");
-  background-size: contain;
-  grid-area: lineNew10;
-}
-
 div[class^="team"] {
   /* jedes div dessen Klasse mit "Team" beginnt wird angesprochen -- ^ = wenn die Klasse mit dem String anfängt */
   background-color: #fff;
   text-align: center;
   font-family: "ProximaNova-Bold" !important;
   position: relative;
+}
+.team8,
+.team9,
+.team10,
+.team11,
+.team12,
+.team13 {
   margin-bottom: auto;
 }
-div[class^="line"] {
-  /* padding: 30px; */
+
+.team5,
+.team6,
+.team7 {
+  margin-top: 25px;
 }
 
 .star {
@@ -330,14 +281,10 @@ div[class^="line"] {
 }
 
 .unit {
-  /* display: inline-flex; */
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   width: 100%;
   padding: 10% 7%;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
   background-color: rgb(229, 229, 229);
 }
 .card_Parent {
@@ -424,7 +371,7 @@ TeamBox
   display: flex;
   background: #fff;
   border: 1px solid #000000;
-  padding: 22px;
+  padding: 5px 10px;
   text-align: center;
   align-items: center;
 }
@@ -473,36 +420,77 @@ GroupContainer
   z-index: 1;
 }
 
+div[class^="line"] {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+div[class^="line"] .kreise {
+  background-color: gray;
+  height: 10px;
+  width: 10px;
+  border-radius: 100%;
+}
+div[class^="line"] .strich {
+  background-color: gray;
+  height: 50px;
+  width: 3px;
+}
+.line1 .strich {
+  height: 100% !important;
+}
+div[class^="lineNew"] {
+  display: none;
+}
 @media (max-width: 760px) {
+  .lineNew1 {
+    grid-area: lineNew1;
+  }
+  .lineNew2 {
+    grid-area: lineNew2;
+  }
+  .lineNew3 {
+    grid-area: lineNew3;
+  }
+  .lineNew4 {
+    grid-area: lineNew4;
+  }
+  .lineNew8 {
+    grid-area: lineNew8;
+  }
+  .lineNew9 {
+    grid-area: lineNew9;
+  }
+  .lineNew10 {
+    grid-area: lineNew10;
+  }
   .nav_home {
-    grid-template-rows: repeat(13, auto);
+    grid-template-rows: repeat(20, auto);
     grid-template-columns: 1fr;
     grid-template-areas:
       "team1"
-      /* "lineNew1" */
+      "lineNew1"
       "team8"
       "team2"
-      /* "lineNew2" */
+      "lineNew2"
       "team5"
-      /* "lineNew3" */
+      "lineNew3"
       "team9"
-      /* "group36" */
       "team6"
-      /* "lineNew4" */
+      "lineNew4"
       "team10"
       "team7"
-      /* "lineNew10" */
+      "lineNew10"
       "team11"
       "team3"
-      /* "lineNew8" */
+      "lineNew8"
       "team12"
       "team4"
-      /* "lineNew9" */
+      "lineNew9"
       "team13";
-    grid-gap: 60px;
+    grid-gap: 25px;
     padding: 20% 7%;
   }
-
   .header {
     grid-template-rows: repeat(8, auto);
     grid-template-columns: 1fr;
@@ -516,6 +504,14 @@ GroupContainer
       "box8";
     grid-gap: 0;
   }
+  .team2,
+  .team3,
+  .team4,
+  .team5,
+  .team6,
+  .team7 {
+    margin-top: 35px;
+  }
   .header .box {
     margin-right: 0;
     margin-bottom: 30px;
@@ -528,13 +524,13 @@ GroupContainer
     text-align: center;
   }
   .box2_trennlinie,
-  .body div[class^="line"],
+  .hideOnMobile,
   .body div[class^="group"] {
     grid-area: unset;
     display: none;
   }
   .unit {
-    display: inline-flex;
+    grid-template-columns: 1fr;
   }
   .card_Parent {
     margin: 0 0 60px 0;
