--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ body {
     "box1 box2 box3 box4  box8"
     "box1 box2 box6 box7 ."
     "box1 box2 box5 . ."
-    "box1 . . . .";
+    "box1 box2 . . .";
   color: rgba(0, 0, 0, 1);
   text-align: left;
   grid-gap: 20px;
@@ -125,6 +125,7 @@ body {
   grid-area: box8;
   /* margin-left: 5rem; */
   cursor: pointer;
+  text-align: right;
 }
 
 /* BodyComponent */
@@ -293,14 +294,6 @@ div[class^="team"] {
 }
 
 .card_Content {
-  /* border: solid 2px;
-  width: fit-content;
-  height: 320px;
-  background-color: white;
-
-  border-color: black;
-  position: relative; */
-  width: fit-content;
   height: auto;
 }
 .card_sub_content {
